# particle-swarm-optimization

./: .gitignore  CMakeLists.txt  README.md  positions.csv  visualize.py
benchmarks/: benchmark.cpp  functions.hpp
examples/: basic.cpp  visualize.cpp
include/pso/: config.hpp  inertia.hpp  observer.hpp  particle.hpp  pso.hpp  result.hpp  topology.hpp
tests/: test_pso.cpp
